--- a/src/csc301/ultrasound/android/res/values/strings.xml
+++ b/src/csc301/ultrasound/android/res/values/strings.xml
@@ -9,7 +9,7 @@
     
     <string name="metadata_image_preview_label">Image preview</string>
     <string name="metadata_patient_name_label">Name</string>
-    <string name="metadata_age_label">Age</string>
+    <string name="metadata_age_label">BirthDate</string>
     <string name="metadata_gestation_age_label">Gestation Age</string>
     <string name="metadata_comments_label">Comments</string>
     <string name="fetal_head_diameter_label">Fetal Head Diameter</string>
